Bug 154870 - Line cap style label greyed out in sidebar even though still functional and applicable
Summary: Line cap style label greyed out in sidebar even though still functional and a...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: implementationError
Depends on:
Blocks: Sidebar-Properties-Line
  Show dependency treegraph
 
Reported: 2023-04-17 21:07 UTC by stragu
Modified: 2024-02-05 10:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-04-17 21:07:41 UTC
Steps to reproduce:
1. Open Draw or Writer
2. Draw a rectangle
3. See sidebar: Line > Cap style is set to "Flat" by default, the "Cap style" string's font is black.
4. Double click on shape to enter text edit mode
5. Click out on canvas, select the shape again

Result: "Cap style" is greyed out but the field is still functional (for example, change the line style to dashed, the width to the highest value, and change the cap style to see that it does apply).

Expected: Text should remain black.

Version:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

Caolán, this started in 7.0 when the setting got exposed in the sidebar with 4f6d95ead1286748810e937c7672de08b8b39a38. Could you please have a look?
Comment 1 Caolán McNamara 2023-04-18 10:16:35 UTC
looks like a little cut and paste typo
Comment 2 Commit Notification 2023-04-18 11:46:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e535a2bd67b50cc529115e9ac9e346140ea164dc

Resolves: tdf#154870 label grayed out when it should not be

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2023-04-18 11:47:13 UTC
done in trunk, backport to 7-5 in gerrit
Comment 4 Commit Notification 2023-04-18 20:59:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/203e4b8f735ae19c9b7db3f67097b55e1e7f2771

Resolves: tdf#154870 label grayed out when it should not be

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2024-02-05 10:52:00 UTC
Verified in:

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!