Resolves: tdf#154870 label grayed out when it should not be

Change-Id: I1d84434622f09e6e91bea550f5dc0321cb7d89ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150548
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>